argocd/apps/gotify/gotify-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
      - name: gotify
        image: ghcr.io/gotify/server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gotify-pvc
