argocd/apps/gotify/gotify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify-service
  namespace: gotify
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gotify
