argocd/apps/gotify/gotify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  rules:
  - host: gotify.greyroom.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  gotify-service
            port:
              number: 80
  tls:
  - secretName: gotify-certificates-greyroom-net-production # <=== Use the name defined in Certificate resource.
